# umber

./: .gitignore  .ocamlformat  README.md  diff_prelude  dune  dune-project  dune-workspace  dune_prelude  explain  generate_prelude  interpret  run.ml  runtest  test_coverage  umberboot.ml  umberc.ml
Std/: Option.um  Prelude.um  dune  prelude.ml  prelude.mli
Std/Collection/: Index.um  String.um
Std/Iter/: Iter.um
Std/Num/: Int.um  Num.um
Std/Traits/: Bounded.um  Enum.um  Ord.um
repl/: dune  (+1 more)
runtime/: Cargo.toml  block.c  block.h  dune  int.c  io.c  poly.c  string.c  string.h
runtime/src/: block.rs  boehm.rs  bool.rs  char.rs  closure.rs  effects.rs  fiber.rs  float.rs  gc.rs  int.rs  io.rs  lib.rs  option.rs  poly.rs  stdlib.rs  string.rs  types.rs
src/: Non_empty.ml  Non_empty.mli  asm_codegen.ml  asm_codegen.mli  asm_helpers.ml  asm_helpers.mli  asm_program.ml  asm_program.mli  ast.ml  auto_format.ml  auto_format.mli  block_index.ml  block_index.mli  btree.ml  btree.mli  by_polarity.ml  by_polarity.mli  call_graph.ml  call_graph.mli  cnstr_tag.ml  cnstr_tag.mli  code_gen.ml  codegen.ml  codegen.mli  compilation.ml  compilation.mli  compilation_error.ml  constant_names.ml  constant_names.mli  core.ml  dune  effect.ml  effect.mli  effect_pattern.mli  fixity.ml  fixity.mli  import.ml  internal_type.ml  internal_type.mli  intrinsics.ml  (+77 more)
src/backend/: asm_codegen.ml  asm_codegen.mli  asm_helpers.ml  asm_helpers.mli  asm_program.ml  asm_program.mli  dune  function_builder.ml  function_builder.mli  import.ml  label_name.ml  label_name.mli  linking.ml  linking.mli  reg_alloc.ml  reg_alloc.mli  register.ml  register.mli  umber_backend.ml  unique_counter.ml  unique_counter.mli
src/common/: btree.ml  btree.mli  compilation_error.ml  dune  import.ml  non_single_list.ml  non_single_list.mli  nonempty.ml  nonempty.mli  span.ml  umber_common.ml  umber_common0.ml  umber_common0.mli  umber_uchar.ml  umber_uchar.mli  unique_list.ml  unique_list.mli  ustring.ml  ustring.mli
src/mir/: block_index.ml  block_index.mli  cnstr.ml  cnstr.mli  cnstr_info.ml  cnstr_info.mli  cnstr_tag.ml  cnstr_tag.mli  context.ml  context.mli  dune  effect_op_id.ml  effect_op_id.mli  extern_decl.ml  fun_decl.ml  import.ml  mir.ml  mir.mli  mir_expr.ml  mir_expr.mli  simple_pattern.ml  simple_pattern.mli  type_utils.ml  type_utils.mli  umber_mir.ml
src/pretty_ast/: auto_format.ml  auto_format.mli  dune  import.ml  pretty_ast.ml  pretty_ast.mli  typed_to_untyped.ml  typed_to_untyped.mli  umber_pretty_ast.ml  umber_pretty_ast.mli
src/sites/: dune  import.ml  umber_sites.ml  umber_sites.mli
src/syntax/: dune  effect.ml  effect.mli  fixity.ml  fixity.mli  intrinsics.ml  let_binding.ml  lex_helpers.ml  lex_helpers.mli  lexer.ml  lexer.mli  literal.ml  literal.mli  module.ml  module.mli  names.ml  node.ml  node.mli  parser.mly  parser_scope.ml  parsing.ml  trait_bound.ml  type_decl.ml  type_decl.mli  type_param.ml  type_param.mli  type_scheme.ml  type_scheme.mli  type_var.ml  type_var.mli  umber_syntax.ml  untyped_ast.ml  untyped_ast.mli
src/typing/: by_polarity.ml  by_polarity.mli  call_graph.ml  call_graph.mli  constant_names.ml  constant_names.mli  dune  import.ml  internal_type.ml  internal_type.mli  name_bindings.ml  name_bindings.mli  nested_map.ml  nested_map.mli  op_tree.ml  op_tree.mli  pattern_names.ml  pattern_names.mli  polarity.mli  sig_def_diff.ml  sig_def_diff.mli  type_bindings.ml  type_bindings.mli  type_simplification.ml  type_simplification.mli  typed_ast.ml  typed_ast.mli  umber_typing.ml
test/: dune  dune.inc  gen_dune.ml  init  test.ml  util.ml  util.mli
test/asm/: AdventOfCode2024_1.expected  AdventOfCode2024_2.expected  AdventOfCode2024_3.expected  AsPattern.expected  Basics.expected  Cat.expected  Classics.expected  Closures.expected  Constructors.expected  CrossModuleUsage.expected  Empty.expected  ExternInt.expected  Functions.expected  HelloWorld.expected  Imports.expected  Iter.expected  Keywords.expected  LetBindingGroups.expected  MixTypeAndEffectVars.expected  ModuleSig.expected  MoreEffectsInSig.expected  MutualRecursion.expected  NeverAndAny.expected  OpSectionLeft.expected  OpSectionRight.expected  Operators.expected  Option.expected  OverlappingImports.expected  ReadEffect.expected  ReadEffect2.expected  RecursiveEffectDecl.expected  ReraiseExn.expected  RestrictiveTypeAnnotation.expected  SelfReferentialImport.expected  State.expected  Text.expected  TypeChecking.expected  TypeModuleNamePunning.expected  WeirdFunCalls.expected
test/ast/: AdventOfCode2024_1.expected  AdventOfCode2024_2.expected  AsPattern.expected  Basics.expected  Cat.expected  Classics.expected  Closures.expected  Constructors.expected  CrossModuleUsage.expected  Effects.expected  Empty.expected  ErrorCrossModuleMutualRecursion.expected  ErrorCyclicTypeAlias.expected  ErrorDuplicateEffectTypeParameter.expected  ErrorDuplicateLet.expected  ErrorDuplicateNameAsPattern.expected  ErrorDuplicateTypeParameter.expected  ErrorDuplicateVal.expected  ErrorEffectOpUnboundParams.expected  ErrorEffectOpValClash.expected  ErrorEffectSigDefDiff.expected  ErrorEffectsNoValueBranch.expected  ErrorHandleNonOperation.expected  ErrorHangingVal.expected  ErrorImportOfImport.expected  ErrorIncompatibleSig.expected  ErrorInconsistentValType.expected  ErrorInexhaustivePattern.expected  ErrorLetRecExpression.expected  ErrorNameClashExtern.expected  ErrorNameClashExternVal.expected  ErrorNameClashWithImport.expected  ErrorNeverSubtyping.expected  ErrorPartialApplication.expected  ErrorPatternUnionNameTypes.expected  ErrorPolymorphicRecursion.expected  ErrorResumeEffects.expected  ErrorShadowedBool.expected  ErrorSignatureCompatibility.expected  ErrorSubmoduleSignatures.expected  (+45 more)
test/examples/: AdventOfCode2024_1.um  AdventOfCode2024_2.um  AdventOfCode2024_3.um  AsPattern.um  Basics.um  Cat.um  Classics.um  Closures.um  Constructors.um  CrossModuleUsage.um  Effects.um  ErrorCrossModuleMutualRecursion.um  (+72 more)
umber_std/: dune  prelude.ml  prelude.mli  prelude_names.sexp
(+274 files in other folders)
