(rule
 (alias prelude)
 (targets prelude_names.sexp prelude_llvm.ll)
 (action
  (progn
   (with-stdout-to
    prelude_names.sexp
    (run %{dep:../umberboot.exe} Prelude.um -no-std -parent Std -names))
   (with-stdout-to
    prelude_llvm.ll
    (run %{dep:../umberboot.exe} Prelude.um -no-std -parent Std -llvm)))))

(library
 (name umber_std)
 (libraries core_kernel)
 (preprocess
  (pps ppx_jane)))
