[package]
name = "runtime"
version = "0.1.0"
authors = ["James Dyer <jamesdyer199@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
heapless = "0.7.16"
libc = { version = "0.2.103", default-features = false }
libc-print = "0.1.20"
libm = "0.2.6"
