(install
 (section
  (site
   (umber runtime)))
 (files libruntime.a))

(rule
 (target libruntime.a)
 (deps
  (glob_files src/*.rs)
  (file Cargo.toml))
 (action
  (progn
   (system "cargo build")
   (system "cargo clippy")
   (run cp target/debug/libruntime.a libruntime.a))))

(rule
 (alias runtest)
 (deps
  (glob_files src/*.rs)
  (file Cargo.toml))
 (action
  (setenv
   MIRIFLAGS
   "-Zmiri-ignore-leaks"
   (system "cargo miri test"))))
