(library
 (name umber)
 (libraries
  core
  core_unix.sys_unix
  dune-site
  sedlex
  menhirLib
  ocamlgraph
  llvm
  llvm.all_backends
  llvm.analysis
  llvm.irreader
  llvm.target
  shell)
 (preprocess
  (pps sedlex.ppx ppx_jane))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(menhir
 (modules parser)
 (flags --table --inspection)
 (infer true))

(generate_sites_module
 (module sources)
 (sites umber))
