(library
 (name umber)
 (libraries
  core
  core_unix.sys_unix
  dune-site
  llvm
  llvm.all_backends
  llvm.analysis
  llvm.irreader
  llvm.target
  menhirLib
  ocamlgraph
  sedlex
  shell)
 (preprocess
  (pps sedlex.ppx ppx_jane))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(menhir
 (modules parser)
 (flags --table --inspection)
 (infer true)
 (explain true))

(generate_sites_module
 (module sources)
 (sites umber))
