(data_only_dirs examples tokens ast mir llvm output)

(executables
 (names test gen_dune)
 (libraries core core_unix.sys_unix umber umberboot)
 (preprocess
  (pps ppx_jane)))

(include dune.inc)

(rule
 (deps
  (glob_files examples/*))
 (action
  (with-stdout-to
   dune.inc.gen
   (run ./gen_dune.exe))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.inc.gen)))
