(install
 (section
  (site
   (umber stdlib)))
 (files prelude_names.sexp prelude_llvm.ll))

(rule
 (target prelude_names.sexp)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:../umberboot.exe}
    %{dep:Std/Prelude.um}
    -no-std
    -parent
    Std
    -names))))

(rule
 (target prelude_llvm.ll)
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:../umberboot.exe}
    %{dep:Std/Prelude.um}
    -no-std
    -parent
    Std
    -llvm))))
