(install
 (section
  (site
   (umber stdlib)))
 (files prelude_names.sexp prelude_asm.asm))

(rule
 (target prelude_names.sexp)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:../umberboot.exe}
    compile
    %{dep:Std/Prelude.um}
    -no-std
    -parent
    Std
    -names))))

(rule
 (target prelude_asm.asm)
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:../umberboot.exe}
    compile
    %{dep:Std/Prelude.um}
    -no-std
    -parent
    Std
    -asm))))
